skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_tabs__tab_merges_full_queue.snap
---
source: tests/snapshot_tabs.rs
expression: rendered
---
"┌ Flightdeck ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session VS  ·  Master pi  ·  file  ·  uptime 0m  ·  Adhoc 0 · Issue 3 · Workflow 0  ·  fresh  $0.00/0T                                                        moon ▾ │"
"└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Conflicts & merges (issue mode) │ Decisions │ Costs │ Daemon                                                                                │"
"└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ merge queue ──────────────────────────────────────────────────────────────────┐┌ conflicts & merges (issue mode) ─────────────────────────────────────────────────────────────────┐"
"│Merge queue                                                                    ││Conflict graph / PR overlap                                                                       │"
"│1. HT-9002  Ready to merge                                                     ││computed 2026-05-15T19:42:08+00:00                                                                │"
"│2. HT-9001  Needs input                                                        ││                                                                                                  │"
"│                                                                               ││HT-9001 ↔ HT-9002                                                                                 │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"│                                                                               ││                                                                                                  │"
"└───────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   f filters   n noise   s session   d decisions   e export   ? help   q quit                                     noise: hidden  ·  filter: off"
"                                                                                                                                                                                     "
